--- a/index.less
+++ b/index.less
@@ -4,10 +4,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Skranji&display=swap");
 
 :root {
-    --selection-color: #5f34fc;
+    --selection-color: #6f4af3;
     --bg-color: #656ac2;
     --title-color: #6153d3;
     --text-color: black;
+    --search-color: #2f52f4;
+    --search-text: black;
+    --dir-color: #4c59a4;
+    --dir-text: black;
+    --version-color: #3a5eff;
+    --version-text: black;
+    --version-accept: #5142ff;
+    --version-accept-text: black;
+    --version-reject: #463bbe;
+    --version-reject-text: black;
 }
 
 * {
