--- a/index.less
+++ b/index.less
@@ -12,6 +12,12 @@
     --search-text: black;
     --dir-color: #4c59a4;
     --dir-text: black;
+    --settings-color: #673efa;
+    --settings-text: black;
+    --settings-revert: #563bf0;
+    --settings-revert-text: black;
+    --settings-ok: #355aff;
+    --settings-ok-text: black;
     --version-color: #3a5eff;
     --version-text: black;
     --version-accept: #5142ff;
