--- a/styles/advancedsettings.less
+++ b/styles/advancedsettings.less
@@ -19,7 +19,7 @@
     pointer-events: all;
     margin-top: -10px;
     width: 60%;
-    height: 60%;
+    height: 70%;
     border-radius: 10px;
     background-color: var(--settings-color);
     padding: 10px;
@@ -157,6 +157,35 @@
         border: 3px solid white;
         cursor: pointer;
     }
+}
+
+.cookie-button {
+    border: none;
+    border-radius: 3px;
+    padding-top: 1px;
+    padding-bottom: 1px;
+    padding-left: 2px;
+    padding-right: 2px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    color: black;
+    font-size: 15px;
+    font-family: "Maven Pro", sans-serif;
+    background-color: #303bdb;
+    border: 2px solid black;
+    &:hover {
+        color: white;
+        border: 2px solid white;
+        cursor: pointer;
+    }
+}
+
+.cookie-text {
+    margin-left: 7px;
+    color: #3543ff;
+    font-size: 15px;
+    font-family: "Maven Pro", sans-serif;
+    user-select: text;
 }
 
 .left-margin {
