--- a/styles/illustcontainer.less
+++ b/styles/illustcontainer.less
@@ -26,10 +26,9 @@
     align-items: center;
     cursor: pointer;
     img {
-        height: 95%;
+        height: auto;
         width: auto;
-        max-height: 150px;
-        max-width: 300px;
+        max-height: 100px;
         padding-left: 5px;
         padding-right: 5px;
     }
